--- a/style/style.css
+++ b/style/style.css
@@ -191,9 +191,26 @@ aside h3{
     color: white;
     padding: 5px;
     margin: -10px -10px 0 -10px;
-    border-radius: 10px 10px 0px 0px;
-
+    border-radius: 10px 10px 0px 0px;    
 }
+
+p#topo{
+    text-align: center;
+}
+
+p > a{
+   font-family: var(--fonte-padrao);
+   color: var(--cor5);
+   text-decoration: none;
+   text-align: right;
+   
+}
+
+p a:hover{
+   color:var(--cor1);
+   text-decoration: underline;
+}
+
 footer{
     color: white;
     text-align: center;
