--- a/style/style.css
+++ b/style/style.css
@@ -194,6 +194,22 @@ aside h3{
     border-radius: 10px 10px 0px 0px;    
 }
 
+p#topo{
+    text-align: center;
+}
+
+p  a{
+   font-family: var(--fonte-padrao);
+   color: var(--cor5);
+   text-decoration: none;
+   
+}
+
+p a:hover{
+   color:var(--cor1);
+   text-decoration: underline;
+}
+
 footer{
     color: white;
     text-align: center;
